@@ -175,23 +175,29 @@ public:
  */
 //extern class cl_error_class error_stack_class;
 //class cl_error_stack: public cl_error
-ERROR_CLASS_DECL(stack): public cl_error
+class cl_error_stack: public cl_error
 {
+private:
+  static class cl_error_class *error_stack_class;
 public:
-  cl_error_stack(void) { classification= &error_stack_class; }
+  cl_error_stack(void);
 };
 
 /*
  * All kind of stack tracker errors
  */
-ERROR_CLASS_DECL(stack_tracker): public cl_error_stack
+class cl_error_stack_tracker: public cl_error_stack
 {
+private:
+  static class cl_error_class *error_stack_tracker_class;
 public:
-  cl_error_stack_tracker(void) { classification= &error_stack_tracker_class; }
+  cl_error_stack_tracker(void);
 };
 
-ERROR_CLASS_DECL(stack_tracker_wrong_handle): public cl_error_stack_tracker
+class cl_error_stack_tracker_wrong_handle: public cl_error_stack_tracker
 {
+private:
+  static class cl_error_class *error_stack_tracker_wrong_handle_class;
 public:
   bool write_operation;
 public:
@@ -200,8 +206,10 @@ public:
   virtual void print(class cl_commander *c);
 };
 
-ERROR_CLASS_DECL(stack_tracker_empty): public cl_error_stack_tracker
+class cl_error_stack_tracker_empty: public cl_error_stack_tracker
 {
+private:
+  static class cl_error_class *error_stack_tracker_empty_class;
 protected:
   class cl_stack_op *operation;
 public:
@@ -211,8 +219,10 @@ public:
   virtual void print(class cl_commander *c);
 };
 
-ERROR_CLASS_DECL(stack_tracker_unmatch): public cl_error_stack_tracker
+class cl_error_stack_tracker_unmatch: public cl_error_stack_tracker
 {
+private:
+  static class cl_error_class *error_stack_tracker_unmatch_class;
 protected:
   class cl_stack_op *top, *operation;
 public:
@@ -223,8 +233,10 @@ public:
   virtual void print(class cl_commander *c);
 };
 
-ERROR_CLASS_DECL(stack_tracker_inconsistent): public cl_error_stack_tracker
+class cl_error_stack_tracker_inconsistent: public cl_error_stack_tracker
 {
+private:
+  static class cl_error_class *error_stack_tracker_inconsistent_class;
 protected:
   class cl_stack_op *operation;
   int unread_data_size;
